# cmfinder-0.4.1.18

./: .gitignore  COPYRIGHT  INSTALL  L21.fasta  README  compiling-on-mingw  git-version  glmS.sto  info.package  package.pl  update-infernal-notes.txt
bugs/: bug1.sh
bugs/files/: score-3.col2
clustalw1.83/: Makefile.am
cmfinder03/: COPYRIGHT  L21.fasta  Makefile.in  align.c  automaker.c  cand.c  cand.h  canda.c  candf.c  cands.c  cluster.c  cmfinder  cmfinder.c  count_seq.c  diff_motif.c  em.c  global.c  global.h  histogram.c  histogram.h  match_constr.c  match_constr.h  summarize.c
cmfinder04/: Makefile.am  base_pair_prediction.c  cand.c  cand.h  cmfinder.c  cmfinder.h  cmfinder04  cmfinder_inf11.project  em.c  from_cmbuild.c  from_cmsearch.c  global.c  valgrind-cmfinder-suppressions
data/: align_matrix  create_table.pl  pair_model  pair_model.train  pscore.rate  runid550-RNAphylo-scores.tab  runid550-hmmpair-scores.tab  runid550-scores.score-btree.pscore  scfg  scfg.mix  scfg.simple  scfg.struct  single_model  single_model.train  tree.newick
examples/: 848-4892-0-0.sto  848-8255-0-0.emblcsv  848-8255-0-0.sto
hmmpair/: AlignmentConsensusAndScoring.cpp  Cm2HMM.cpp  Cm2HMM.h  Cm2HmmOptimize.cpp  Cm2HmmOptimize.h  CommaSepFileReader.cpp  CommaSepFileReader.h  CovarianceModel.cpp  CovarianceModel.h  GSCConsensus.h  HmmType1.cpp  HmmType1.h  InfernalHmm.cpp  InfernalHmm.h  MLHeuristic.cpp  Makefile.am  Makefile.in  MarkovModelStats.cpp  MarkovModelStats.h  MiscExceptions.cpp  NaryCounter.cpp  NaryCounter.h  Optimize.cpp  Optimize.h  QueueWithFindMin.h  ScanHmm.cpp  ScanHmm.h  SymbolicMath.cpp  SymbolicMath.h  hmmpair.cpp  hmmpair.h  stdafx.h  stl_extra.h  vectorPlus.h
lib-infernal-0.7/easel/: Makefile.in  bioparse_paml.c  bioparse_paml.h  dmatrix.c  dmatrix.h  easel.c  easel.h.in  esl_alphabet.c  esl_dirichlet.c  esl_dirichlet.h  (+45 more)
lib-qrna/: COPYING.gnu  Makefile.am  Makefile.in  er_math.c  er_math.h  evolve.c  evolve.h  mat_globals.c  mat_globals.h  mat_structs.h  matrix.c  matrix.h  misc.c  misc.h
lib-vienna-1.7.1/: Makefile.am  Makefile.in  config.h.in  duplex.c  fold.c  stringdist.c  utils.c  utils.h
pfold-extras/: COPYRIGHT  Makefile.am  Makefile.in  addparen  addparen.c  align.c  align.h  col.c  col.h  col2fasta  col2fasta.c  col2newick  col2newick.c  col2psalign  col2psalign.c  col2txtalign  col2txtalign.c  drawdot  drawdot.c  drawphyl  drawphyl.c  edouble.c  edouble.h  extendstem  extendstem.c  fasta2col  file.c  file.h  findphyl  findphyl.c  grammar.c  grammar.h  graph.c  graph.h  inout.c  inout.h  llist.c  llist.h  matrix.c  matrix.h  (+22 more)
user-manual/: bio.bib  user-manual.tex
web/: index.html
(+52 files in other folders)
